add facebook messenger plugin

--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -8,6 +8,40 @@
     </head>
     <body>
         <div id="root"></div>
+
+        <!-- Messenger Plugin chat Code -->
+        <div id="fb-root"></div>
+
+        <!-- Your Plugin chat code -->
+        <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+        <script>
+            var chatbox = document.getElementById("fb-customer-chat");
+            chatbox.setAttribute("page_id", "133217936543757");
+            chatbox.setAttribute("attribution", "biz_inbox");
+        </script>
+
+        <!-- Your SDK code -->
+        <script>
+            window.fbAsyncInit = function () {
+                FB.init({
+                    xfbml: true,
+                    version: "v18.0",
+                });
+            };
+
+            (function (d, s, id) {
+                var js,
+                    fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src =
+                    "https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            })(document, "script", "facebook-jssdk");
+        </script>
+
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
